<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fantasy Stocks</string>
    <string name="title_activity_home">My Pools</string>
    <string name="title_activity_find_pool">Find Pool</string>
    <string name="title_activity_create_pool">Create Pool</string>
    <string name="title_activity_view_pool">View Pool</string>
    <string name="title_activity_view_portfolio">View portfolio</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="my_pools_label">My Pools</string>
    <string name="current_funds_label">Current Value:</string>
    <string name="title_activity_buy">Buy Security</string>
    <string name="symbol_label">Symbol:</string>
    <string name="action_label">Action:</string>
    <string name="shares_label">Shares:</string>
    <string name="place_order_label">Place Order</string>
    <string name="trade_label">Trade</string>
    <string name="submit_label">Submit</string>
    <string name="portfolio_limit_label">portfolio Limit:</string>
    <string name="logIn">Log in</string>
    <string name="signUp">Sign up</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="join_pool_label">Join Pool</string>
    <string name="funds_available_label">Available Funds: </string>
    <string name="symbol_hint">Enter stock symbol</string>
    <string name="shares_hint">Enter shares to purchase</string>
    <string name="order_total_label">Order Total</string>
    <string name="insufficient_funds_label">Insufficient Funds</string>
    <string name="find_pool_label">FIND</string>
    <string name="create_pool_label">CREATE</string>
    <string name="status_open_label">OPEN</string>
    <string name="status_closed_label">CLOSED</string>
    <string name="cash_label">Holdings:</string>
    <string name="title_activity_tour">Fantasy Stocks</string>
    <string name="hello_world">Hello world!</string>
    <string name="starting_funds_label">Starting Funds:</string>

</resources>