<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0f6a94"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etSignUpName"
        style="@style/editText_login_style"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/etSignUpEmail"
        style="@style/editText_login_style"
        android:layout_below="@+id/etSignUpName"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etSignUpPassword"
        style="@style/editText_login_style"
        android:layout_below="@+id/etSignUpEmail"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/button_login_style"
        android:layout_below="@+id/etSignUpPassword"
        android:layout_marginTop="40dp"
        android:background="@drawable/login_button"
        android:text="@string/signUp" />

    <TextView
        android:id="@+id/tvSignupError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etSignUpPassword"
        android:layout_below="@+id/etSignUpPassword"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12dp"
        android:textColor="#FF0000"
        android:textSize="12sp" />

</RelativeLayout>